// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Auction page tests AuctionImage renders correctly 1`] = `
<div>
  <div
    class="pa3-ns"
  >
    <div
      class="w-100 flex jcc vh-50 aic"
    >
      <div
        class="w-40-l dn dib-l"
      />
      <div
        class="w-60-l tc h-100"
      >
        <img
          alt="gem for sale"
          class="w-auto h-100"
          src="false"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Auction page tests CountdownTimer renders correctly 1`] = `
<div>
  <div
    class="tc pa2"
  >
    <p
      class="b"
    >
      Lowest price on
    </p>
    <time
      class="measure"
    >
      Thursday 1st of January, 5:31 AM
    </time>
  </div>
</div>
`;

exports[`Auction page tests FeatureBand renders correctly 1`] = `
<div>
  <div
    class="relative"
  >
    <div
      class="w-100 PropTypes.string.isRequired h-auto flex aic jcb mt3 br--left-ns pa3"
    >
      <div
        class="w-20 tc"
      >
        <div
          class="sc-bdVaJa giFZti"
        >
          <img
            alt="PropTypes.string.isRequired"
            class="w-auto center h3"
            src="PropTypes.string.isRequired"
          />
          <p
            class="ttu f5 mt2 o-50 black tc pt1 b false"
          >
            0
          </p>
        </div>
      </div>
      <div
        class="w-80 pl3 pl0-ns"
      >
        <p
          class="b ttu"
        >
          PropTypes.string.isRequired
        </p>
        <p
          class=" pr4-ns"
        >
          PropTypes.string.isRequired
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Auction page tests Footer & MailingList render correctly 1`] = `
<div>
  <footer
    class="bg-footer-black sc-gzVnrw hLDReS"
  >
    <div
      class="sc-EHOje jtspjU"
    />
    <div
      class="mw9 center sc-bZQynM kWSAPn"
    >
      <div
        class="pa4 bt b--black-10"
      >
        <div
          class="mb6-l"
        >
          <article
            class="flex jcb w-75 center mt5"
          >
            <a
              class="f5 db fw6 pv3 black-70 link dim white  hover-light-purple"
              href="https://cryptominerworld.com/"
              title="Home"
            >
              Home
            </a>
            <a
              class="f5 db fw6 pv3 black-70 link dim white hover-gold"
              href="https://cryptominerworld.com/game_info/"
              title="Game Info"
            >
              Game Info
            </a>
            <a
              class="f5 db fw6 pv3 black-70 link dim white hover-green"
              href="https://cryptominerworld.com/founders_geode_pre-sale/"
              title="Founder Geode Pre-Sale"
            >
              Founder Geode Pre-Sale
            </a>
            <a
              class="f5 db fw6 pv3 black-70 link dim white undefined"
              href="https://cryptominerworld.com/workshop/"
              title="Workshop"
            >
              Workshop
            </a>
            <a
              class="f5 db fw6 pv3 black-70 link dim white  hover-light-purple"
              href="https://cryptominerworld.com/market/"
              title="Market"
            >
              Market
            </a>
            <a
              class="f5 db fw6 pv3 black-70 link dim white hover-green"
              href="https://cryptominerworld.com/world/"
              title="World"
            >
              World
            </a>
            <a
              class="f5 db fw6 pv3 black-70 link dim white hover-gold"
              href="https://cryptominerworld.com/faq/"
              title="FAQ"
            >
              FAQ
            </a>
            <a
              class="f5 db fw6 pv3 black-70 link dim white undefined"
              href="http://www.sophophilia.com/press/sheet.php?p=cryptoMiner_world"
              title="Press Kit"
            >
              Press Kit
            </a>
          </article>
          <div
            class="flex jcc mt5"
          >
            <a
              class="link dim dib mr3 white"
              href="https://www.facebook.com/CryptoMinerWorld/"
              title="Cryptominer World on Facebook"
            >
              <svg
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M18 2h-3a5 5 0 0 0-5 5v3H7v4h3v8h4v-8h3l1-4h-4V7a1 1 0 0 1 1-1h3z"
                />
              </svg>
            </a>
            <a
              class="link dim dib mr3 white"
              href="https://twitter.com/CryptoMiner_W"
              title="Cryptominer World on Twitter"
            >
              <svg
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M23 3a10.9 10.9 0 0 1-3.14 1.53 4.48 4.48 0 0 0-7.86 3v1A10.66 10.66 0 0 1 3 4s-4 9 5 13a11.64 11.64 0 0 1-7 2c9 5 20 0 20-11.5a4.5 4.5 0 0 0-.08-.83A7.72 7.72 0 0 0 23 3z"
                />
              </svg>
            </a>
          </div>
        </div>
        <div
          class="flex jcc pb5-ns"
        >
          <div
            class="flex jcc"
          >
            <p
              class="f7 black-70 dib pr3 mb3 white"
            >
              Copyright © Cryptominer World 2018
            </p>
            <p
              class="f7 black-70 dib pr3 mb3 white"
            >
              Version 0.1.10
            </p>
          </div>
        </div>
        <div
          class="db dn-ns"
        >
          <p
            class="f7 white mt4 tc"
          >
            Copyright © Cryptominer World 2018
          </p>
        </div>
      </div>
    </div>
  </footer>
</div>
`;

exports[`Auction page tests Footer & MailingList render correctly 2`] = `
Object {
  "baseElement": <body>
    <div>
      <div
        class="relative"
      >
        <div
          class="w-100 PropTypes.string.isRequired h-auto flex aic jcb mt3 br--left-ns pa3"
        >
          <div
            class="w-20 tc"
          >
            <div
              class="sc-bdVaJa giFZti"
            >
              <img
                alt="PropTypes.string.isRequired"
                class="w-auto center h3"
                src="PropTypes.string.isRequired"
              />
              <p
                class="ttu f5 mt2 o-50 black tc pt1 b false"
              >
                0
              </p>
            </div>
          </div>
          <div
            class="w-80 pl3 pl0-ns"
          >
            <p
              class="b ttu"
            >
              PropTypes.string.isRequired
            </p>
            <p
              class=" pr4-ns"
            >
              PropTypes.string.isRequired
            </p>
          </div>
        </div>
      </div>
    </div>
    <div>
      <div
        class="Ripple"
        style="left: 1px; top: 1px;"
      />
    </div>
    <div>
      <a
        href="#"
      >
        <button
          class="sc-bwzfXH fbRjTD"
        >
          title
        </button>
      </a>
    </div>
    <div>
      <div
        class="pa3-ns"
      >
        <div
          class="w-100 flex jcc vh-50 aic"
        >
          <div
            class="w-40-l dn dib-l"
          />
          <div
            class="w-60-l tc h-100"
          >
            <img
              alt="gem for sale"
              class="w-auto h-100"
              src="false"
            />
          </div>
        </div>
      </div>
    </div>
    <div>
      <div
        class="tc pa2"
      >
        <p
          class="b"
        >
          Lowest price on
        </p>
        <time
          class="measure"
        >
          Thursday 1st of January, 5:31 AM
        </time>
      </div>
    </div>
    <div>
      <div
        class="bg-off-black white ma0 pa3 measure"
      >
        <h2
          class="white"
        >
          Frequently Asked Questions
        </h2>
        <details>
          <summary
            class="underlined blue pointer"
          >
            How does this work?
          </summary>
          <p>
            This auction is a Dutch Auction. It works by having a high and a low price. Then setting a time frame in which the price will steadily lower from the high to the low. The Auction ends as soon as one user pays their bid. Bids are always the current price. If the low price is reached and no bid was made, the item stays for sale at that low price indefinitely, until someone buys it or the user that started the auction cancels it. The user can cancel the auction at any time, before or after the low price is reached.
          </p>
        </details>
        <details>
          <summary
            class="underlined blue pointer"
          >
            How often do auctions run?
          </summary>
          <p>
            Auctions will start out one at a time. The items for sale will be very rare. They will run for a week, but once one is bought the next one begins. Later we will do more than one item for sale at once, at that time some rare, but not very rare, items will be sold at lower prices.
          </p>
        </details>
        <details>
          <summary
            class="underlined blue pointer"
          >
            Can I resell an Item?
          </summary>
          <p>
            Once the Market is open to the public (Phase 2) you will be able to sell any item you own to other players.
          </p>
        </details>
        <details>
          <summary
            class="underlined blue pointer"
          >
            How do I bid?
          </summary>
          <p>
            You bid by clicking the big pink “Buy Now” button. You will need to be using a Web3 compatible Ethereum Wallet program. MetaMask, Toshi/Coinbase Wallet, BUNTOY, Brave browser, Trust, Cipher, are some of the more well know options. For more information on how to install MetaMask
          </p>
          <p>
            For more information on how to install MetaMask
             
            <a
              href="https://cryptominerworld.com/game_info/#GameInfoMetaMask"
            >
              Click here
               
            </a>
          </p>
        </details>
      </div>
    </div>
    <div>
      <footer
        class="bg-footer-black sc-gzVnrw hLDReS"
      >
        <div
          class="sc-EHOje jtspjU"
        />
        <div
          class="mw9 center sc-bZQynM kWSAPn"
        >
          <div
            class="pa4 bt b--black-10"
          >
            <div
              class="mb6-l"
            >
              <article
                class="flex jcb w-75 center mt5"
              >
                <a
                  class="f5 db fw6 pv3 black-70 link dim white  hover-light-purple"
                  href="https://cryptominerworld.com/"
                  title="Home"
                >
                  Home
                </a>
                <a
                  class="f5 db fw6 pv3 black-70 link dim white hover-gold"
                  href="https://cryptominerworld.com/game_info/"
                  title="Game Info"
                >
                  Game Info
                </a>
                <a
                  class="f5 db fw6 pv3 black-70 link dim white hover-green"
                  href="https://cryptominerworld.com/founders_geode_pre-sale/"
                  title="Founder Geode Pre-Sale"
                >
                  Founder Geode Pre-Sale
                </a>
                <a
                  class="f5 db fw6 pv3 black-70 link dim white undefined"
                  href="https://cryptominerworld.com/workshop/"
                  title="Workshop"
                >
                  Workshop
                </a>
                <a
                  class="f5 db fw6 pv3 black-70 link dim white  hover-light-purple"
                  href="https://cryptominerworld.com/market/"
                  title="Market"
                >
                  Market
                </a>
                <a
                  class="f5 db fw6 pv3 black-70 link dim white hover-green"
                  href="https://cryptominerworld.com/world/"
                  title="World"
                >
                  World
                </a>
                <a
                  class="f5 db fw6 pv3 black-70 link dim white hover-gold"
                  href="https://cryptominerworld.com/faq/"
                  title="FAQ"
                >
                  FAQ
                </a>
                <a
                  class="f5 db fw6 pv3 black-70 link dim white undefined"
                  href="http://www.sophophilia.com/press/sheet.php?p=cryptoMiner_world"
                  title="Press Kit"
                >
                  Press Kit
                </a>
              </article>
              <div
                class="flex jcc mt5"
              >
                <a
                  class="link dim dib mr3 white"
                  href="https://www.facebook.com/CryptoMinerWorld/"
                  title="Cryptominer World on Facebook"
                >
                  <svg
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M18 2h-3a5 5 0 0 0-5 5v3H7v4h3v8h4v-8h3l1-4h-4V7a1 1 0 0 1 1-1h3z"
                    />
                  </svg>
                </a>
                <a
                  class="link dim dib mr3 white"
                  href="https://twitter.com/CryptoMiner_W"
                  title="Cryptominer World on Twitter"
                >
                  <svg
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M23 3a10.9 10.9 0 0 1-3.14 1.53 4.48 4.48 0 0 0-7.86 3v1A10.66 10.66 0 0 1 3 4s-4 9 5 13a11.64 11.64 0 0 1-7 2c9 5 20 0 20-11.5a4.5 4.5 0 0 0-.08-.83A7.72 7.72 0 0 0 23 3z"
                    />
                  </svg>
                </a>
              </div>
            </div>
            <div
              class="flex jcc pb5-ns"
            >
              <div
                class="flex jcc"
              >
                <p
                  class="f7 black-70 dib pr3 mb3 white"
                >
                  Copyright © Cryptominer World 2018
                </p>
                <p
                  class="f7 black-70 dib pr3 mb3 white"
                >
                  Version 0.1.10
                </p>
              </div>
            </div>
            <div
              class="db dn-ns"
            >
              <p
                class="f7 white mt4 tc"
              >
                Copyright © Cryptominer World 2018
              </p>
            </div>
          </div>
        </div>
      </footer>
    </div>
    <div>
      <div
        class="sc-dnqmqq hOzadq"
      >
        <div
          class="pa4-l bg-transparent"
        >
          <div
            class="bg-off-black mw8 center pa2 ba b--black-10 flex-ns aic"
          >
            <img
              alt="gem kid"
              class="dn dib-ns mh3 h4"
              src="gemKid.png"
            />
            <legend
              class="pa0 f5 f4-ns mb3 white w-50-ns tl-ns tc"
            >
              <p
                class="f2 mb0"
              >
                Early bird gets the gem.
              </p>
              <p
                class="mt0"
              >
                Be notified when our next auction starts.
              </p>
            </legend>
            <fieldset
              class="bn ma0 pa0 w-50-ns"
            >
              <div>
                <form>
                  <input
                    class="f6 f5-l input-reset bn fl white bg-dark-gray pa3 lh-solid w-100 w-75-m w-80-l br2-ns br--left-ns"
                    id="email-address"
                    name="email-address"
                    placeholder="Your Email Address"
                    type="text"
                    value=""
                  />
                  <input
                    class="f6 f5-l button-reset fl pv3 tc bn bg-animate bg-black-70 hover-bg-black white pointer w-100 w-25-m w-20-l br2-ns br--right-ns"
                    type="submit"
                    value="Subscribe"
                  />
                </form>
                <div
                  class="w-100 fl tl"
                />
              </div>
            </fieldset>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="sc-dnqmqq hOzadq"
    >
      <div
        class="pa4-l bg-transparent"
      >
        <div
          class="bg-off-black mw8 center pa2 ba b--black-10 flex-ns aic"
        >
          <img
            alt="gem kid"
            class="dn dib-ns mh3 h4"
            src="gemKid.png"
          />
          <legend
            class="pa0 f5 f4-ns mb3 white w-50-ns tl-ns tc"
          >
            <p
              class="f2 mb0"
            >
              Early bird gets the gem.
            </p>
            <p
              class="mt0"
            >
              Be notified when our next auction starts.
            </p>
          </legend>
          <fieldset
            class="bn ma0 pa0 w-50-ns"
          >
            <div>
              <form>
                <input
                  class="f6 f5-l input-reset bn fl white bg-dark-gray pa3 lh-solid w-100 w-75-m w-80-l br2-ns br--left-ns"
                  id="email-address"
                  name="email-address"
                  placeholder="Your Email Address"
                  type="text"
                  value=""
                />
                <input
                  class="f6 f5-l button-reset fl pv3 tc bn bg-animate bg-black-70 hover-bg-black white pointer w-100 w-25-m w-20-l br2-ns br--right-ns"
                  type="submit"
                  value="Subscribe"
                />
              </form>
              <div
                class="w-100 fl tl"
              />
            </div>
          </fieldset>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "getAllByAltText": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllBySelectText": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getAllByValue": [Function],
  "getByAltText": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getBySelectText": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "getByValue": [Function],
  "queryAllByAltText": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllBySelectText": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryAllByValue": [Function],
  "queryByAltText": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryBySelectText": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "queryByValue": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Auction page tests Gem renders correctly 1`] = `
<div>
  <div
    class="sc-bdVaJa giFZti"
  >
    <img
      alt="1"
      class="w-auto center h3"
      src="1"
    />
    <p
      class="ttu f5 mt2 o-50 black tc pt1 b false"
    >
      1
    </p>
  </div>
</div>
`;

exports[`Auction page tests Gembox renders correctly 1`] = `
Object {
  "baseElement": <body>
    <div>
      <div
        class="relative"
      >
        <div
          class="w-100 PropTypes.string.isRequired h-auto flex aic jcb mt3 br--left-ns pa3"
        >
          <div
            class="w-20 tc"
          >
            <div
              class="sc-bdVaJa giFZti"
            >
              <img
                alt="PropTypes.string.isRequired"
                class="w-auto center h3"
                src="PropTypes.string.isRequired"
              />
              <p
                class="ttu f5 mt2 o-50 black tc pt1 b false"
              >
                0
              </p>
            </div>
          </div>
          <div
            class="w-80 pl3 pl0-ns"
          >
            <p
              class="b ttu"
            >
              PropTypes.string.isRequired
            </p>
            <p
              class=" pr4-ns"
            >
              PropTypes.string.isRequired
            </p>
          </div>
        </div>
      </div>
    </div>
    <div>
      <div
        class="Ripple"
        style="left: 1px; top: 1px;"
      />
    </div>
    <div>
      <a
        href="#"
      >
        <button
          class="sc-bwzfXH fbRjTD"
        >
          title
        </button>
      </a>
    </div>
    <div>
      <div
        class="pa3-ns"
      >
        <div
          class="w-100 flex jcc vh-50 aic"
        >
          <div
            class="w-40-l dn dib-l"
          />
          <div
            class="w-60-l tc h-100"
          >
            <img
              alt="gem for sale"
              class="w-auto h-100"
              src="false"
            />
          </div>
        </div>
      </div>
    </div>
    <div>
      <div
        class="tc pa2"
      >
        <p
          class="b"
        >
          Lowest price on
        </p>
        <time
          class="measure"
        >
          Thursday 1st of January, 5:31 AM
        </time>
      </div>
    </div>
    <div>
      <div
        class="bg-off-black white ma0 pa3 measure"
      >
        <h2
          class="white"
        >
          Frequently Asked Questions
        </h2>
        <details>
          <summary
            class="underlined blue pointer"
          >
            How does this work?
          </summary>
          <p>
            This auction is a Dutch Auction. It works by having a high and a low price. Then setting a time frame in which the price will steadily lower from the high to the low. The Auction ends as soon as one user pays their bid. Bids are always the current price. If the low price is reached and no bid was made, the item stays for sale at that low price indefinitely, until someone buys it or the user that started the auction cancels it. The user can cancel the auction at any time, before or after the low price is reached.
          </p>
        </details>
        <details>
          <summary
            class="underlined blue pointer"
          >
            How often do auctions run?
          </summary>
          <p>
            Auctions will start out one at a time. The items for sale will be very rare. They will run for a week, but once one is bought the next one begins. Later we will do more than one item for sale at once, at that time some rare, but not very rare, items will be sold at lower prices.
          </p>
        </details>
        <details>
          <summary
            class="underlined blue pointer"
          >
            Can I resell an Item?
          </summary>
          <p>
            Once the Market is open to the public (Phase 2) you will be able to sell any item you own to other players.
          </p>
        </details>
        <details>
          <summary
            class="underlined blue pointer"
          >
            How do I bid?
          </summary>
          <p>
            You bid by clicking the big pink “Buy Now” button. You will need to be using a Web3 compatible Ethereum Wallet program. MetaMask, Toshi/Coinbase Wallet, BUNTOY, Brave browser, Trust, Cipher, are some of the more well know options. For more information on how to install MetaMask
          </p>
          <p>
            For more information on how to install MetaMask
             
            <a
              href="https://cryptominerworld.com/game_info/#GameInfoMetaMask"
            >
              Click here
               
            </a>
          </p>
        </details>
      </div>
    </div>
    <div>
      <footer
        class="bg-footer-black sc-gzVnrw hLDReS"
      >
        <div
          class="sc-EHOje jtspjU"
        />
        <div
          class="mw9 center sc-bZQynM kWSAPn"
        >
          <div
            class="pa4 bt b--black-10"
          >
            <div
              class="mb6-l"
            >
              <article
                class="flex jcb w-75 center mt5"
              >
                <a
                  class="f5 db fw6 pv3 black-70 link dim white  hover-light-purple"
                  href="https://cryptominerworld.com/"
                  title="Home"
                >
                  Home
                </a>
                <a
                  class="f5 db fw6 pv3 black-70 link dim white hover-gold"
                  href="https://cryptominerworld.com/game_info/"
                  title="Game Info"
                >
                  Game Info
                </a>
                <a
                  class="f5 db fw6 pv3 black-70 link dim white hover-green"
                  href="https://cryptominerworld.com/founders_geode_pre-sale/"
                  title="Founder Geode Pre-Sale"
                >
                  Founder Geode Pre-Sale
                </a>
                <a
                  class="f5 db fw6 pv3 black-70 link dim white undefined"
                  href="https://cryptominerworld.com/workshop/"
                  title="Workshop"
                >
                  Workshop
                </a>
                <a
                  class="f5 db fw6 pv3 black-70 link dim white  hover-light-purple"
                  href="https://cryptominerworld.com/market/"
                  title="Market"
                >
                  Market
                </a>
                <a
                  class="f5 db fw6 pv3 black-70 link dim white hover-green"
                  href="https://cryptominerworld.com/world/"
                  title="World"
                >
                  World
                </a>
                <a
                  class="f5 db fw6 pv3 black-70 link dim white hover-gold"
                  href="https://cryptominerworld.com/faq/"
                  title="FAQ"
                >
                  FAQ
                </a>
                <a
                  class="f5 db fw6 pv3 black-70 link dim white undefined"
                  href="http://www.sophophilia.com/press/sheet.php?p=cryptoMiner_world"
                  title="Press Kit"
                >
                  Press Kit
                </a>
              </article>
              <div
                class="flex jcc mt5"
              >
                <a
                  class="link dim dib mr3 white"
                  href="https://www.facebook.com/CryptoMinerWorld/"
                  title="Cryptominer World on Facebook"
                >
                  <svg
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M18 2h-3a5 5 0 0 0-5 5v3H7v4h3v8h4v-8h3l1-4h-4V7a1 1 0 0 1 1-1h3z"
                    />
                  </svg>
                </a>
                <a
                  class="link dim dib mr3 white"
                  href="https://twitter.com/CryptoMiner_W"
                  title="Cryptominer World on Twitter"
                >
                  <svg
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M23 3a10.9 10.9 0 0 1-3.14 1.53 4.48 4.48 0 0 0-7.86 3v1A10.66 10.66 0 0 1 3 4s-4 9 5 13a11.64 11.64 0 0 1-7 2c9 5 20 0 20-11.5a4.5 4.5 0 0 0-.08-.83A7.72 7.72 0 0 0 23 3z"
                    />
                  </svg>
                </a>
              </div>
            </div>
            <div
              class="flex jcc pb5-ns"
            >
              <div
                class="flex jcc"
              >
                <p
                  class="f7 black-70 dib pr3 mb3 white"
                >
                  Copyright © Cryptominer World 2018
                </p>
                <p
                  class="f7 black-70 dib pr3 mb3 white"
                >
                  Version 0.1.10
                </p>
              </div>
            </div>
            <div
              class="db dn-ns"
            >
              <p
                class="f7 white mt4 tc"
              >
                Copyright © Cryptominer World 2018
              </p>
            </div>
          </div>
        </div>
      </footer>
    </div>
    <div>
      <div
        class="sc-dnqmqq hOzadq"
      >
        <div
          class="pa4-l bg-transparent"
        >
          <div
            class="bg-off-black mw8 center pa2 ba b--black-10 flex-ns aic"
          >
            <img
              alt="gem kid"
              class="dn dib-ns mh3 h4"
              src="gemKid.png"
            />
            <legend
              class="pa0 f5 f4-ns mb3 white w-50-ns tl-ns tc"
            >
              <p
                class="f2 mb0"
              >
                Early bird gets the gem.
              </p>
              <p
                class="mt0"
              >
                Be notified when our next auction starts.
              </p>
            </legend>
            <fieldset
              class="bn ma0 pa0 w-50-ns"
            >
              <div>
                <form>
                  <input
                    class="f6 f5-l input-reset bn fl white bg-dark-gray pa3 lh-solid w-100 w-75-m w-80-l br2-ns br--left-ns"
                    id="email-address"
                    name="email-address"
                    placeholder="Your Email Address"
                    type="text"
                    value=""
                  />
                  <input
                    class="f6 f5-l button-reset fl pv3 tc bn bg-animate bg-black-70 hover-bg-black white pointer w-100 w-25-m w-20-l br2-ns br--right-ns"
                    type="submit"
                    value="Subscribe"
                  />
                </form>
                <div
                  class="w-100 fl tl"
                />
              </div>
            </fieldset>
          </div>
        </div>
      </div>
    </div>
    <div>
      <div
        class=""
      >
        <div
          class="flex tc pa3"
        >
          <div
            class="w-100"
          >
            <small
              class="ttu white dn-ns"
            >
              level
            </small>
            <div
              class="sc-bdVaJa giFZti"
            >
              <img
                alt="level"
                class="w-auto center h3"
                src="gem2.png"
              />
              <p
                class="ttu f5 mt2 o-50 black tc pt1 b false"
              >
                1
              </p>
            </div>
          </div>
          <div
            class="w-100"
          >
            <small
              class="ttu white dn-ns"
            >
              grade
            </small>
            <div
              class="sc-bdVaJa giFZti"
            >
              <img
                alt="grade"
                class="w-auto center h3"
                src="gem1.png"
              />
              <p
                class="ttu f5 mt2 o-50 black tc pt1 b pr2"
              >
                C
              </p>
            </div>
          </div>
          <div
            class="w-100"
          >
            <small
              class="ttu white dn-ns"
            >
              rate
            </small>
            <div
              class="sc-bdVaJa giFZti"
            >
              <img
                alt="rate"
                class="w-auto center h3"
                src="gem3.png"
              />
              <p
                class="ttu f5 mt2 o-50 black tc pt1 b false"
              >
                +2.00%
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class=""
    >
      <div
        class="flex tc pa3"
      >
        <div
          class="w-100"
        >
          <small
            class="ttu white dn-ns"
          >
            level
          </small>
          <div
            class="sc-bdVaJa giFZti"
          >
            <img
              alt="level"
              class="w-auto center h3"
              src="gem2.png"
            />
            <p
              class="ttu f5 mt2 o-50 black tc pt1 b false"
            >
              1
            </p>
          </div>
        </div>
        <div
          class="w-100"
        >
          <small
            class="ttu white dn-ns"
          >
            grade
          </small>
          <div
            class="sc-bdVaJa giFZti"
          >
            <img
              alt="grade"
              class="w-auto center h3"
              src="gem1.png"
            />
            <p
              class="ttu f5 mt2 o-50 black tc pt1 b pr2"
            >
              C
            </p>
          </div>
        </div>
        <div
          class="w-100"
        >
          <small
            class="ttu white dn-ns"
          >
            rate
          </small>
          <div
            class="sc-bdVaJa giFZti"
          >
            <img
              alt="rate"
              class="w-auto center h3"
              src="gem3.png"
            />
            <p
              class="ttu f5 mt2 o-50 black tc pt1 b false"
            >
              +2.00%
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "getAllByAltText": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllBySelectText": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getAllByValue": [Function],
  "getByAltText": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getBySelectText": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "getByValue": [Function],
  "queryAllByAltText": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllBySelectText": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryAllByValue": [Function],
  "queryByAltText": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryBySelectText": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "queryByValue": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Auction page tests ProgressMeter renders correctly 1`] = `
Object {
  "baseElement": <body>
    <div>
      <div
        class="relative"
      >
        <div
          class="w-100 PropTypes.string.isRequired h-auto flex aic jcb mt3 br--left-ns pa3"
        >
          <div
            class="w-20 tc"
          >
            <div
              class="sc-bdVaJa giFZti"
            >
              <img
                alt="PropTypes.string.isRequired"
                class="w-auto center h3"
                src="PropTypes.string.isRequired"
              />
              <p
                class="ttu f5 mt2 o-50 black tc pt1 b false"
              >
                0
              </p>
            </div>
          </div>
          <div
            class="w-80 pl3 pl0-ns"
          >
            <p
              class="b ttu"
            >
              PropTypes.string.isRequired
            </p>
            <p
              class=" pr4-ns"
            >
              PropTypes.string.isRequired
            </p>
          </div>
        </div>
      </div>
    </div>
    <div>
      <div
        class="Ripple"
        style="left: 1px; top: 1px;"
      />
    </div>
    <div>
      <a
        href="#"
      >
        <button
          class="sc-bwzfXH fbRjTD"
        >
          title
        </button>
      </a>
    </div>
    <div>
      <div
        class="pa3-ns"
      >
        <div
          class="w-100 flex jcc vh-50 aic"
        >
          <div
            class="w-40-l dn dib-l"
          />
          <div
            class="w-60-l tc h-100"
          >
            <img
              alt="gem for sale"
              class="w-auto h-100"
              src="false"
            />
          </div>
        </div>
      </div>
    </div>
    <div>
      <div
        class="tc pa2"
      >
        <p
          class="b"
        >
          Lowest price on
        </p>
        <time
          class="measure"
        >
          Thursday 1st of January, 5:31 AM
        </time>
      </div>
    </div>
    <div>
      <div
        class="bg-off-black white ma0 pa3 measure"
      >
        <h2
          class="white"
        >
          Frequently Asked Questions
        </h2>
        <details>
          <summary
            class="underlined blue pointer"
          >
            How does this work?
          </summary>
          <p>
            This auction is a Dutch Auction. It works by having a high and a low price. Then setting a time frame in which the price will steadily lower from the high to the low. The Auction ends as soon as one user pays their bid. Bids are always the current price. If the low price is reached and no bid was made, the item stays for sale at that low price indefinitely, until someone buys it or the user that started the auction cancels it. The user can cancel the auction at any time, before or after the low price is reached.
          </p>
        </details>
        <details>
          <summary
            class="underlined blue pointer"
          >
            How often do auctions run?
          </summary>
          <p>
            Auctions will start out one at a time. The items for sale will be very rare. They will run for a week, but once one is bought the next one begins. Later we will do more than one item for sale at once, at that time some rare, but not very rare, items will be sold at lower prices.
          </p>
        </details>
        <details>
          <summary
            class="underlined blue pointer"
          >
            Can I resell an Item?
          </summary>
          <p>
            Once the Market is open to the public (Phase 2) you will be able to sell any item you own to other players.
          </p>
        </details>
        <details>
          <summary
            class="underlined blue pointer"
          >
            How do I bid?
          </summary>
          <p>
            You bid by clicking the big pink “Buy Now” button. You will need to be using a Web3 compatible Ethereum Wallet program. MetaMask, Toshi/Coinbase Wallet, BUNTOY, Brave browser, Trust, Cipher, are some of the more well know options. For more information on how to install MetaMask
          </p>
          <p>
            For more information on how to install MetaMask
             
            <a
              href="https://cryptominerworld.com/game_info/#GameInfoMetaMask"
            >
              Click here
               
            </a>
          </p>
        </details>
      </div>
    </div>
    <div>
      <footer
        class="bg-footer-black sc-gzVnrw hLDReS"
      >
        <div
          class="sc-EHOje jtspjU"
        />
        <div
          class="mw9 center sc-bZQynM kWSAPn"
        >
          <div
            class="pa4 bt b--black-10"
          >
            <div
              class="mb6-l"
            >
              <article
                class="flex jcb w-75 center mt5"
              >
                <a
                  class="f5 db fw6 pv3 black-70 link dim white  hover-light-purple"
                  href="https://cryptominerworld.com/"
                  title="Home"
                >
                  Home
                </a>
                <a
                  class="f5 db fw6 pv3 black-70 link dim white hover-gold"
                  href="https://cryptominerworld.com/game_info/"
                  title="Game Info"
                >
                  Game Info
                </a>
                <a
                  class="f5 db fw6 pv3 black-70 link dim white hover-green"
                  href="https://cryptominerworld.com/founders_geode_pre-sale/"
                  title="Founder Geode Pre-Sale"
                >
                  Founder Geode Pre-Sale
                </a>
                <a
                  class="f5 db fw6 pv3 black-70 link dim white undefined"
                  href="https://cryptominerworld.com/workshop/"
                  title="Workshop"
                >
                  Workshop
                </a>
                <a
                  class="f5 db fw6 pv3 black-70 link dim white  hover-light-purple"
                  href="https://cryptominerworld.com/market/"
                  title="Market"
                >
                  Market
                </a>
                <a
                  class="f5 db fw6 pv3 black-70 link dim white hover-green"
                  href="https://cryptominerworld.com/world/"
                  title="World"
                >
                  World
                </a>
                <a
                  class="f5 db fw6 pv3 black-70 link dim white hover-gold"
                  href="https://cryptominerworld.com/faq/"
                  title="FAQ"
                >
                  FAQ
                </a>
                <a
                  class="f5 db fw6 pv3 black-70 link dim white undefined"
                  href="http://www.sophophilia.com/press/sheet.php?p=cryptoMiner_world"
                  title="Press Kit"
                >
                  Press Kit
                </a>
              </article>
              <div
                class="flex jcc mt5"
              >
                <a
                  class="link dim dib mr3 white"
                  href="https://www.facebook.com/CryptoMinerWorld/"
                  title="Cryptominer World on Facebook"
                >
                  <svg
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M18 2h-3a5 5 0 0 0-5 5v3H7v4h3v8h4v-8h3l1-4h-4V7a1 1 0 0 1 1-1h3z"
                    />
                  </svg>
                </a>
                <a
                  class="link dim dib mr3 white"
                  href="https://twitter.com/CryptoMiner_W"
                  title="Cryptominer World on Twitter"
                >
                  <svg
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M23 3a10.9 10.9 0 0 1-3.14 1.53 4.48 4.48 0 0 0-7.86 3v1A10.66 10.66 0 0 1 3 4s-4 9 5 13a11.64 11.64 0 0 1-7 2c9 5 20 0 20-11.5a4.5 4.5 0 0 0-.08-.83A7.72 7.72 0 0 0 23 3z"
                    />
                  </svg>
                </a>
              </div>
            </div>
            <div
              class="flex jcc pb5-ns"
            >
              <div
                class="flex jcc"
              >
                <p
                  class="f7 black-70 dib pr3 mb3 white"
                >
                  Copyright © Cryptominer World 2018
                </p>
                <p
                  class="f7 black-70 dib pr3 mb3 white"
                >
                  Version 0.1.10
                </p>
              </div>
            </div>
            <div
              class="db dn-ns"
            >
              <p
                class="f7 white mt4 tc"
              >
                Copyright © Cryptominer World 2018
              </p>
            </div>
          </div>
        </div>
      </footer>
    </div>
    <div>
      <div
        class="sc-dnqmqq hOzadq"
      >
        <div
          class="pa4-l bg-transparent"
        >
          <div
            class="bg-off-black mw8 center pa2 ba b--black-10 flex-ns aic"
          >
            <img
              alt="gem kid"
              class="dn dib-ns mh3 h4"
              src="gemKid.png"
            />
            <legend
              class="pa0 f5 f4-ns mb3 white w-50-ns tl-ns tc"
            >
              <p
                class="f2 mb0"
              >
                Early bird gets the gem.
              </p>
              <p
                class="mt0"
              >
                Be notified when our next auction starts.
              </p>
            </legend>
            <fieldset
              class="bn ma0 pa0 w-50-ns"
            >
              <div>
                <form>
                  <input
                    class="f6 f5-l input-reset bn fl white bg-dark-gray pa3 lh-solid w-100 w-75-m w-80-l br2-ns br--left-ns"
                    id="email-address"
                    name="email-address"
                    placeholder="Your Email Address"
                    type="text"
                    value=""
                  />
                  <input
                    class="f6 f5-l button-reset fl pv3 tc bn bg-animate bg-black-70 hover-bg-black white pointer w-100 w-25-m w-20-l br2-ns br--right-ns"
                    type="submit"
                    value="Subscribe"
                  />
                </form>
                <div
                  class="w-100 fl tl"
                />
              </div>
            </fieldset>
          </div>
        </div>
      </div>
    </div>
    <div>
      <div
        class=""
      >
        <div
          class="flex tc pa3"
        >
          <div
            class="w-100"
          >
            <small
              class="ttu white dn-ns"
            >
              level
            </small>
            <div
              class="sc-bdVaJa giFZti"
            >
              <img
                alt="level"
                class="w-auto center h3"
                src="gem2.png"
              />
              <p
                class="ttu f5 mt2 o-50 black tc pt1 b false"
              >
                1
              </p>
            </div>
          </div>
          <div
            class="w-100"
          >
            <small
              class="ttu white dn-ns"
            >
              grade
            </small>
            <div
              class="sc-bdVaJa giFZti"
            >
              <img
                alt="grade"
                class="w-auto center h3"
                src="gem1.png"
              />
              <p
                class="ttu f5 mt2 o-50 black tc pt1 b pr2"
              >
                C
              </p>
            </div>
          </div>
          <div
            class="w-100"
          >
            <small
              class="ttu white dn-ns"
            >
              rate
            </small>
            <div
              class="sc-bdVaJa giFZti"
            >
              <img
                alt="rate"
                class="w-auto center h3"
                src="gem3.png"
              />
              <p
                class="ttu f5 mt2 o-50 black tc pt1 b false"
              >
                +2.00%
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div>
      <div
        class="sc-bdVaJa giFZti"
      >
        <img
          alt="1"
          class="w-auto center h3"
          src="1"
        />
        <p
          class="ttu f5 mt2 o-50 black tc pt1 b false"
        >
          1
        </p>
      </div>
    </div>
    <div>
      <div
        class="white ma0 pa3 tc "
      >
        <small
          class="white ttu "
        >
          current price
        </small>
        <p
          class="basic"
          style="font-size: xx-large;"
        >
          Ξ 
          <span
            data-testid="currentPrice"
          >
            0
          </span>
        </p>
        <div
          class="ant-progress ant-progress-line ant-progress-status-active ant-progress-default ba br-pill pb1 ph2 mb1  b--white-40"
        >
          <div>
            <div
              class="ant-progress-outer"
            >
              <div
                class="ant-progress-inner"
              >
                <div
                  class="ant-progress-bg"
                  style="width: 88.00000000000001%; height: 8px; background: rgb(192, 24, 171); border-radius: 100px;"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="flex jcb"
        >
          <small
            class="basic"
          >
            Ξ 
            <span
              data-testid="minPrice"
            >
              0
            </span>
          </small>
          <small
            class="basic"
          >
            Ξ 
            <span
              data-testid="maxPrice"
            >
              0
            </span>
          </small>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="white ma0 pa3 tc "
    >
      <small
        class="white ttu "
      >
        current price
      </small>
      <p
        class="basic"
        style="font-size: xx-large;"
      >
        Ξ 
        <span
          data-testid="currentPrice"
        >
          0
        </span>
      </p>
      <div
        class="ant-progress ant-progress-line ant-progress-status-active ant-progress-default ba br-pill pb1 ph2 mb1  b--white-40"
      >
        <div>
          <div
            class="ant-progress-outer"
          >
            <div
              class="ant-progress-inner"
            >
              <div
                class="ant-progress-bg"
                style="width: 88.00000000000001%; height: 8px; background: rgb(192, 24, 171); border-radius: 100px;"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="flex jcb"
      >
        <small
          class="basic"
        >
          Ξ 
          <span
            data-testid="minPrice"
          >
            0
          </span>
        </small>
        <small
          class="basic"
        >
          Ξ 
          <span
            data-testid="maxPrice"
          >
            0
          </span>
        </small>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "getAllByAltText": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllBySelectText": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getAllByValue": [Function],
  "getByAltText": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getBySelectText": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "getByValue": [Function],
  "queryAllByAltText": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllBySelectText": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryAllByValue": [Function],
  "queryByAltText": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryBySelectText": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "queryByValue": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Auction page tests Question renders correctly 1`] = `
<div>
  <div
    class="bg-off-black white ma0 pa3 measure"
  >
    <h2
      class="white"
    >
      Frequently Asked Questions
    </h2>
    <details>
      <summary
        class="underlined blue pointer"
      >
        How does this work?
      </summary>
      <p>
        This auction is a Dutch Auction. It works by having a high and a low price. Then setting a time frame in which the price will steadily lower from the high to the low. The Auction ends as soon as one user pays their bid. Bids are always the current price. If the low price is reached and no bid was made, the item stays for sale at that low price indefinitely, until someone buys it or the user that started the auction cancels it. The user can cancel the auction at any time, before or after the low price is reached.
      </p>
    </details>
    <details>
      <summary
        class="underlined blue pointer"
      >
        How often do auctions run?
      </summary>
      <p>
        Auctions will start out one at a time. The items for sale will be very rare. They will run for a week, but once one is bought the next one begins. Later we will do more than one item for sale at once, at that time some rare, but not very rare, items will be sold at lower prices.
      </p>
    </details>
    <details>
      <summary
        class="underlined blue pointer"
      >
        Can I resell an Item?
      </summary>
      <p>
        Once the Market is open to the public (Phase 2) you will be able to sell any item you own to other players.
      </p>
    </details>
    <details>
      <summary
        class="underlined blue pointer"
      >
        How do I bid?
      </summary>
      <p>
        You bid by clicking the big pink “Buy Now” button. You will need to be using a Web3 compatible Ethereum Wallet program. MetaMask, Toshi/Coinbase Wallet, BUNTOY, Brave browser, Trust, Cipher, are some of the more well know options. For more information on how to install MetaMask
      </p>
      <p>
        For more information on how to install MetaMask
         
        <a
          href="https://cryptominerworld.com/game_info/#GameInfoMetaMask"
        >
          Click here
           
        </a>
      </p>
    </details>
  </div>
</div>
`;

exports[`Auction page tests Ripple Button renders correctly 1`] = `
<div>
  <a
    href="#"
  >
    <button
      class="sc-bwzfXH fbRjTD"
    >
      title
    </button>
  </a>
</div>
`;

exports[`Auction page tests Ripple Effect renders correctly 1`] = `
<div>
  <div
    class="Ripple"
    style="left: 1px; top: 1px;"
  />
</div>
`;

exports[`navbar snapshot tests filter show correct filter results 1`] = `
<div>
  <div
    class="sc-bdVaJa giFZti"
  >
    <img
      alt="1"
      class="w-auto center h3"
      src="1"
    />
    <p
      class="ttu f5 mt2 o-50 black tc pt1 b false"
    >
      1
    </p>
  </div>
</div>
`;

exports[`navbar snapshot tests grade always show letters form D - AAA 1`] = `
<div>
  <div
    class="sc-bdVaJa giFZti"
  >
    <img
      alt="1"
      class="w-auto center h3"
      src="1"
    />
    <p
      class="ttu f5 mt2 o-50 black tc pt1 b false"
    >
      1
    </p>
  </div>
</div>
`;

exports[`navbar snapshot tests grade and rate modifications are bound, chnaging one should result in correct adjustmnet in teh other 1`] = `
<div>
  <div
    class="sc-bdVaJa giFZti"
  >
    <img
      alt="1"
      class="w-auto center h3"
      src="1"
    />
    <p
      class="ttu f5 mt2 o-50 black tc pt1 b false"
    >
      1
    </p>
  </div>
</div>
`;

exports[`navbar snapshot tests grade shows letters on slide 1`] = `
<div>
  <div
    class="sc-bdVaJa giFZti"
  >
    <img
      alt="1"
      class="w-auto center h3"
      src="1"
    />
    <p
      class="ttu f5 mt2 o-50 black tc pt1 b false"
    >
      1
    </p>
  </div>
</div>
`;

exports[`navbar snapshot tests only display 2 rows of 3 images 1`] = `
<div>
  <div
    class="sc-bdVaJa giFZti"
  >
    <img
      alt="1"
      class="w-auto center h3"
      src="1"
    />
    <p
      class="ttu f5 mt2 o-50 black tc pt1 b false"
    >
      1
    </p>
  </div>
</div>
`;

exports[`navbar snapshot tests pink gem dude shows up as gem page mascot 1`] = `
<div>
  <div
    class="sc-bdVaJa giFZti"
  >
    <img
      alt="1"
      class="w-auto center h3"
      src="1"
    />
    <p
      class="ttu f5 mt2 o-50 black tc pt1 b false"
    >
      1
    </p>
  </div>
</div>
`;

exports[`navbar snapshot tests price slider shows a 3 digit number on slide 1`] = `
<div>
  <div
    class="sc-bdVaJa giFZti"
  >
    <img
      alt="1"
      class="w-auto center h3"
      src="1"
    />
    <p
      class="ttu f5 mt2 o-50 black tc pt1 b false"
    >
      1
    </p>
  </div>
</div>
`;

exports[`navbar snapshot tests showExpired renders correctly 1`] = `
<div>
  <div
    class="sc-bdVaJa giFZti"
  >
    <img
      alt="1"
      class="w-auto center h3"
      src="1"
    />
    <p
      class="ttu f5 mt2 o-50 black tc pt1 b false"
    >
      1
    </p>
  </div>
</div>
`;
